ENH: trying to fix broken layout of the site

--- a/pythonbrasil8/static_files/css/common.css
+++ b/pythonbrasil8/static_files/css/common.css
@@ -144,6 +144,7 @@ body {
 .dates .dates-container {
     margin: 0 auto;
     float: none;
+    width: 500px
 }
 
 .dates-container {
